--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ before_install:
   - pandoc -v
 install:
   - pip install coveralls
+  - pip install tox-travis
 script:
+  - tox
   - coverage run --source=pandoc_latex_admonition setup.py test
+  - coverage report -m
 after_success:
   - coveralls
