Add inner and outer position

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,15 @@
 [tox]
-envlist = py27,py34,py35
+envlist = py36
 
 [testenv]
-deps = pytest
-commands = pytest
+deps =
+	coverage
+	black
+	pylint
+    panflute>=1.10
+
+commands =
+    black --check pandoc_latex_admonition.py setup.py tests/test_admonition.py docs/conf.py
+    coverage run -a --source=pandoc_latex_admonition setup.py test
+    pylint pandoc_latex_admonition.py setup.py
+
