--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
 language: python
 python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-before_install:
-  - wget https://github.com/jgm/pandoc/releases/download/2.2.3.2/pandoc-2.2.3.2-1-amd64.deb
-  - sudo dpkg -i pandoc-2.2.3.2-1-amd64.deb
-  - pandoc -v
+  - "3.6"
 install:
+  - wget https://github.com/jgm/pandoc/releases/download/2.6/pandoc-2.6-1-amd64.deb
+  - sudo dpkg -i pandoc-2.6-1-amd64.deb
+  - pandoc -v
+  - pip install -e .[test]
+  - pip install black
+  - pip install pylint
+  - pip install coverage
   - pip install coveralls
-  - pip install tox-travis
 script:
-  - tox
-  - coverage run --source=pandoc_latex_admonition setup.py test
-  - coverage report -m
+  - black --check pandoc_latex_admonition.py setup.py tests/test_admonition.py
+  - pylint pandoc_latex_admonition.py setup.py tests/test_admonition.py
+  - coverage run -a --source=pandoc_latex_admonition setup.py test
 after_success:
   - coveralls
+
