--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,10 @@
 [tox]
-envlist = py36
+envlist = py36,py37,py38,py39
 
 [testenv]
-deps =
-	coverage
-	black
-	pylint
-    panflute>=1.10
+deps = .[test]
 
 commands =
     black --check pandoc_latex_admonition.py setup.py tests/test_admonition.py docs/conf.py
-    coverage run -a --source=pandoc_latex_admonition setup.py test
+    pytest --cov=pandoc_latex_admonition
     pylint pandoc_latex_admonition.py setup.py
