--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,14 @@ universal=1
 
 [metadata]
 description-file = README.md
+version = 1.3.2
+release = 1.3.2
 
 [aliases]
-test=pytest
+test = pytest
+
+[build_sphinx]
+project = pandoc-latex-admonition
+version = 1.3
+release = 1.3.2
+copyright = 2017-2021, Christophe Demko
