--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,7 +11,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -20,6 +22,9 @@ jobs:
       uses: abatilo/actions-poetry@v2
       with:
         poetry-version: 1.7.1
+    - name: Set up poetry-dynamic-versioning
+      run: |
+        poetry self add "poetry-dynamic-versioning[plugin]"
     - name: Install dependencies
       run: |
         poetry install
