--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 requires =
-    tox>=4.2
+    tox>=4.11
 
 [testenv]
 description = run unit tests
@@ -22,14 +22,14 @@ commands_pre =
     poetry env use {envpython}
     poetry install
 commands =
-    poetry run slotscheck pandoc_latex_admonition.py
-    poetry run refurb pandoc_latex_admonition.py
+    poetry run slotscheck pandoc_latex_admonition
+    poetry run refurb pandoc_latex_admonition
     poetry run teyit --show-stats --fail-on-change tests/
-    poetry run ruff pandoc_latex_admonition.py
-    poetry run black --check --diff pandoc_latex_admonition.py tests
+    poetry run ruff check pandoc_latex_admonition
+    poetry run black --check --diff pandoc_latex_admonition tests
     poetry run doc8 -q docs
-    poetry run mypy --package pandoc_latex_admonition
-    poetry run flake8 pandoc_latex_admonition.py
+    poetry run mypy pandoc_latex_admonition
+    poetry run flake8 pandoc_latex_admonition
 commands_post =
     poetry env use system
 
@@ -39,7 +39,7 @@ commands_pre =
     poetry env use {envpython}
     poetry install
 commands =
-    poetry run pylint pandoc_latex_admonition.py
+    poetry run pylint pandoc_latex_admonition
 commands_post =
     poetry env use system
 
