--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands =
     poetry run teyit --show-stats --fail-on-change tests/
     poetry run ruff check pandoc_latex_admonition
     poetry run black --check --diff pandoc_latex_admonition tests
-    poetry run doc8 -q docs
+    poetry run doc8 -q docs README.md -e .rst -e .md
     poetry run mypy pandoc_latex_admonition
     poetry run flake8 pandoc_latex_admonition
 commands_post =
