--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ source = "vcs"
 
 [tool.hatch.version.raw-options]
 version_scheme = "no-guess-dev"
-local_scheme = "node-and-date"
+local_scheme = "no-local-version"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/pandoc_latex_admonition"]
